Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: myapps
  labels:
    apps: wordpress-and-mysql
spec:
  selector:
    matchLabels:
      apps: wordpress-and-mysql
  replicas: 1
  template:
    metadata:
      labels:
        apps: wordpress-and-mysql
    spec:
      containers:
      - name: wordpress-container
        image: wordpress
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: pvc-for-pods
